<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <ImageView android:layout_width="30dp"
            android:id="@+id/back"
            android:layout_height="30dp"
            android:src="@drawable/back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            />
        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="@dimen/selectschool"
            android:text="@string/selectschool"/>
    </RelativeLayout>
 <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#CACACD" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="#F0F0F0"
        android:layout_weight="1.4" >
        <EditText
            android:id="@+id/schoolName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/schoolhint"
            android:inputType="text"
            android:background="@drawable/corners_bg3"
            android:singleLine="true"
            android:textSize="@dimen/editschool"
            android:textColorHint="@color/gray" >
        </EditText>
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pic"
             android:layout_gravity="left|center_vertical"
             android:layout_marginLeft="10dp"
            android:layout_below="@id/schoolName"
            android:src="@drawable/location"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationText"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/pic"
            android:layout_marginLeft="8dp"
            android:layout_below="@id/schoolName"
            android:text="位置"/>
    </RelativeLayout>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textColor="#CACACD"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="8dp"
        android:text="@string/nearschool" />
 <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="#CACACD" />
    <ListView
        android:id="@+id/school"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7" 
         android:cacheColorHint="#00000000"
        android:divider="#FAdAFA"
         android:listSelector="@drawable/listview" 
        android:dividerHeight="1dp">
    </ListView>

</LinearLayout>